Add play func, video index
