# go/model_play_video.go
@@ -1,0 +1,17 @@
+/*
+ * queueservice
+ *
+ * Video queue service
+ *
+ * API version: 0.0.1
+ * Contact: sbirudavolu@umass.edu
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+// PlayVideo - Play video request, moves video to top of queue
+type PlayVideo struct {
+
+	Id string `json:"id,omitempty"`
+}
